--- a/index.html
+++ b/index.html
@@ -712,5 +712,6 @@
     </div>
 
     <script src="./assets/js/slider.js"></script>
+    <script src="./assets/js/login.js"></script>
 </body>
 </html>
