--- a/assets/html/iphone14.html
+++ b/assets/html/iphone14.html
@@ -17,7 +17,7 @@
             </a>
             <div class="hd-search">
                 <form action="">
-                    <input type="text" placeholder="   Nhập tên điện thoại, laptop, phụ kiện... cần tìm" />
+                    <input type="text" placeholder="Nhập tên điện thoại, laptop, phụ kiện... cần tìm" />
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </form>
             </div>
@@ -396,7 +396,7 @@
                     </ul>
                 </div>
                 <div class="st-pd-btn">
-                    <button class="btn btn-primary btn-full">
+                    <button class="btn btn-primary btn-full js-buy">
                         <div>
                             <strong>MUA NGAY</strong>
                         </div>
@@ -710,9 +710,9 @@
         </div>
     </div>
 
-    <div class="hd-taikhoan js-modal">
-        <div class="container-taikhoan js-container">
-            <div class="taikhoan-close js-close">
+    <div class="hd-taikhoan js-modal-login">
+        <div class="container-taikhoan js-container-login">
+            <div class="taikhoan-close js-close-login">
                 <i class="fa-solid fa-circle-xmark"></i>
             </div>
 
@@ -743,6 +743,14 @@
                     <span>Bạn chưa có tài khoản? </span>
                     <a href="#">Đăng ký ngay</a>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="btn-buy js-modal-buy">
+        <div class="container-buy js-container-buy">
+            <div class="btn-buy-close js-close-buy">
+                <i class="fa-solid fa-circle-xmark"></i>
             </div>
         </div>
     </div>
