--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <div class="hd-search">
                 <form action="">
-                    <input type="text" placeholder="   Nhập tên điện thoại, laptop, phụ kiện... cần tìm" />
+                    <input type="text" placeholder="Nhập tên điện thoại, laptop, phụ kiện... cần tìm" />
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </form>
             </div>
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="">
                         <i class="fa-sharp fa-solid fa-cart-shopping"></i>
                         Giỏ hàng
                     </a>
