--- a/assets/html/laptopAsus.html
+++ b/assets/html/laptopAsus.html
@@ -647,6 +647,7 @@
     </div>
 
     <script src="/Web_laptop_phone/assets/js/login.js"></script>
+    <script src="/Web_laptop_phone/assets/js/buy.js"></script>
     <script src="/Web_laptop_phone/assets/js/slider.js"></script>
 </body>
 </html>
