--- a/index.html
+++ b/index.html
@@ -674,9 +674,9 @@
         </div>
     </div>
 
-    <div class="hd-taikhoan js-modal">
-        <div class="container-taikhoan js-container">
-            <div class="taikhoan-close js-close">
+    <div class="hd-taikhoan js-modal-login">
+        <div class="container-taikhoan js-container-login">
+            <div class="taikhoan-close js-close-login">
                 <i class="fa-solid fa-circle-xmark"></i>
             </div>
 
