--- a/assets/html/laptopGigabyte.html
+++ b/assets/html/laptopGigabyte.html
@@ -656,6 +656,7 @@
     </div>
 
     <script src="/Web_laptop_phone/assets/js/login.js"></script>
+    <script src="/Web_laptop_phone/assets/js/buy.js"></script>
     <script src="/Web_laptop_phone/assets/js/slider.js"></script>
 </body>
 </html>
